# discord-chatgpt

./: Cargo.toml  README.md
src/: lib.rs
src/commands/: mod.rs
